output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1370.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1370.py", line 142
    /* else (pos[0]==8): */ durations[8]))))))))
    ^
SyntaxError: invalid syntax
